// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleUpdateData should update the state 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -197,11 +197,11 @@
                    Object {},
                  ]
                }
                testID=\\"firstNameInput\\"
                underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-               value=\\"Christian\\"
+               value=\\"GreatGuy\\"
              />
            </View>
            <View
              style={
                Array ["
`;

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <SvgMock
          color="#ffffff"
          onPress={[Function]}
          style={
            Object {
              "marginLeft": 10,
            }
          }
          testID="backIcon"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "paddingHorizontal": 25,
            "paddingVertical": 50,
          }
        }
      >
        <View
          style={
            Object {
              "bottom": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {},
                Object {
                  "flexDirection": "column",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "alignItems": "center",
                    "flex": 2,
                    "justifyContent": "flex-end",
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "marginBottom": 30,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Object {
                        "color": "#ffffff",
                        "fontFamily": "SourceSansPro-Light",
                        "fontSize": 24,
                        "fontWeight": "300",
                        "lineHeight": 30,
                        "maxWidth": 230,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Who would you like to take steps of faith with this week?
                </Text>
              </View>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#52C5DC",
                    "fontSize": 13,
                    "marginTop": 15,
                  },
                ]
              }
            >
              First Name or Nickname
            </Text>
            <TextInput
              allowFontScaling={true}
              autoCorrect={false}
              autoFocus={true}
              blurOnSubmit={false}
              editable={true}
              multiline={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              placeholder="First Name (Required)"
              placeholderTextColor="#ffffff"
              rejectResponderTermination={true}
              returnKeyType="next"
              selectionColor="#3CC8E6"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderBottomColor": "#52C5DC",
                    "borderBottomWidth": 1,
                    "color": "#ffffff",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.25,
                    "paddingVertical": 5,
                  },
                  Object {},
                ]
              }
              testID="firstNameInput"
              underlineColorAndroid="rgba(0,0,0,0)"
              value="Christian"
            />
          </View>
          <View
            style={
              Array [
                Object {},
                Object {
                  "flexDirection": "column",
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#52C5DC",
                    "fontSize": 13,
                    "marginTop": 15,
                  },
                ]
              }
            />
            <TextInput
              allowFontScaling={true}
              autoCorrect={false}
              autoFocus={false}
              blurOnSubmit={false}
              editable={true}
              multiline={false}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Last Name (optional)"
              placeholderTextColor="#ffffff"
              rejectResponderTermination={true}
              returnKeyType="done"
              selectionColor="#3CC8E6"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderBottomColor": "#52C5DC",
                    "borderBottomWidth": 1,
                    "color": "#ffffff",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.25,
                    "paddingVertical": 5,
                  },
                  Object {},
                ]
              }
              testID="lastNameInput"
              underlineColorAndroid="rgba(0,0,0,0)"
              value=""
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              null,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  null,
                ],
              ],
            ]
          }
        >
          CONTINUE
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`savePerson add new person with org should add a new person 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -161,11 +161,13 @@
                      \\"fontSize\\": 13,
                      \\"marginTop\\": 15,
                    },
                  ]
                }
-             />
+             >
+               First Name or Nickname
+             </Text>
              <TextInput
                allowFontScaling={true}
                autoCorrect={false}
                autoFocus={true}
                blurOnSubmit={false}
@@ -195,11 +197,11 @@
                    Object {},
                  ]
                }
                testID=\\"firstNameInput\\"
                underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-               value=\\"\\"
+               value=\\"new name\\"
              />
            </View>
            <View
              style={
                Array [
@@ -308,14 +310,11 @@
                Object {
                  \\"alignItems\\": \\"center\\",
                  \\"height\\": 48,
                  \\"width\\": 650,
                },
-               Object {
-                 \\"backgroundColor\\": \\"#005A7F\\",
-                 \\"color\\": \\"#007398\\",
-               },
+               null,
              ],
              Object {
                \\"borderRadius\\": 50,
              },
            ]
@@ -338,14 +337,11 @@
                    \\"fontWeight\\": \\"500\\",
                    \\"letterSpacing\\": 1.5,
                    \\"textAlign\\": \\"center\\",
                  },
                  Array [
-                   Object {
-                     \\"backgroundColor\\": \\"#005A7F\\",
-                     \\"color\\": \\"#007398\\",
-                   },
+                   null,
                  ],
                ],
              ]
            }
          >"
`;

exports[`savePerson add new person without org should add a new person 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -161,11 +161,13 @@
                      \\"fontSize\\": 13,
                      \\"marginTop\\": 15,
                    },
                  ]
                }
-             />
+             >
+               First Name or Nickname
+             </Text>
              <TextInput
                allowFontScaling={true}
                autoCorrect={false}
                autoFocus={true}
                blurOnSubmit={false}
@@ -195,11 +197,11 @@
                    Object {},
                  ]
                }
                testID=\\"firstNameInput\\"
                underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-               value=\\"\\"
+               value=\\"new name\\"
              />
            </View>
            <View
              style={
                Array [
@@ -308,14 +310,11 @@
                Object {
                  \\"alignItems\\": \\"center\\",
                  \\"height\\": 48,
                  \\"width\\": 650,
                },
-               Object {
-                 \\"backgroundColor\\": \\"#005A7F\\",
-                 \\"color\\": \\"#007398\\",
-               },
+               null,
              ],
              Object {
                \\"borderRadius\\": 50,
              },
            ]
@@ -338,14 +337,11 @@
                    \\"fontWeight\\": \\"500\\",
                    \\"letterSpacing\\": 1.5,
                    \\"textAlign\\": \\"center\\",
                  },
                  Array [
-                   Object {
-                     \\"backgroundColor\\": \\"#005A7F\\",
-                     \\"color\\": \\"#007398\\",
-                   },
+                   null,
                  ],
                ],
              ]
            }
          >"
`;

exports[`savePerson update existing person set last name to null should update person and navigate back 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -226,13 +226,11 @@
                      \\"fontSize\\": 13,
                      \\"marginTop\\": 15,
                    },
                  ]
                }
-             >
-               Last Name
-             </Text>
+             />
              <TextInput
                allowFontScaling={true}
                autoCorrect={false}
                autoFocus={false}
                blurOnSubmit={false}
@@ -261,11 +259,11 @@
                    Object {},
                  ]
                }
                testID=\\"lastNameInput\\"
                underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-               value=\\"someLastName\\"
+               value=\\"\\"
              />
            </View>
          </View>
        </View>
      </View>"
`;

exports[`savePerson update existing person with org should update person and navigate back 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -197,11 +197,11 @@
                    Object {},
                  ]
                }
                testID=\\"firstNameInput\\"
                underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-               value=\\"Christian\\"
+               value=\\"new name\\"
              />
            </View>
            <View
              style={
                Array ["
`;

exports[`savePerson update existing person without org should update person and navigate back 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -197,11 +197,11 @@
                    Object {},
                  ]
                }
                testID=\\"firstNameInput\\"
                underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-               value=\\"Christian\\"
+               value=\\"new name\\"
              />
            </View>
            <View
              style={
                Array ["
`;
